# openms-viewer

./: .cmakelintrc  .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci-lint.yml  release.yml  unix-portable.yml  windows-portable.yml
ci/portable/: README.md  archive-unix.sh  archive-windows.ps1  audit-linux.sh  audit-macos.sh  build-openms-unix.sh  build-openms-windows.sh  build-viewer-unix.sh  build-viewer-windows.sh  bundle-dotnet-unix.sh  bundle-dotnet-windows.ps1  configure-openms-unix.sh  configure-openms-windows.sh  deploy-linux.sh  deploy-macos.sh  deploy-windows.ps1  stage-data-unix.sh  stage-data-windows.ps1  test-viewer-unix.sh  verify-linux.sh  verify-macos.sh  verify-windows.ps1
cmake/: DeployRuntimeDependencies.cmake  FixupMacBundle.cmake
docs/: architecture.md  comparison-pyopenms-viewer.md  feature-matrix.md  packaging.md  performance.md  screenshots.md
docs/adr/: 0001-row-stack-layout-instead-of-qdockwidget.md
docs/design-notes/: issue-21-mz-annotation.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/annotation/: SpectrumAnnotation.cpp  SpectrumAnnotation.h
src/export/: MzMLExportDialog.cpp  MzMLExportDialog.h  MzMLExporter.cpp  MzMLExporter.h  PlotExporter.cpp  PlotExporter.h
src/icons/: icons.qrc
src/layout/: LayoutModel.cpp  LayoutModel.h
src/logging/: ApplicationLog.cpp  ApplicationLog.h
src/model/: ChromatogramSource.cpp  ChromatogramSource.h  ConsensusDocument.cpp  ConsensusDocument.h  ConsensusDrilldown.cpp  ConsensusDrilldown.h  FormatRegistry.cpp  FormatRegistry.h  IdentificationData.h  ImagingDocument.cpp  ImagingDocument.h  OswDocument.cpp  OswDocument.h  OswStore.cpp  OswStore.h  RtUnit.h  RunData.h  SelectionController.cpp  SelectionController.h  Sqlite3Api.h  SqliteWriteDb.h  TraceSmoothing.cpp  TraceSmoothing.h  ViewerDocument.cpp  ViewerDocument.h
src/plot/: IonMobilityRasterizer.cpp  IonMobilityRasterizer.h  PeakMapRasterizer.cpp  PeakMapRasterizer.h  PlotAxis.cpp  PlotAxis.h  PlotRange.h  PlotTheme.cpp  PlotTheme.h  RasterShading.cpp  RasterShading.h
src/widgets/: ChromatogramPanelWidget.cpp  ChromatogramPanelWidget.h  CompactControls.h  ConsensusPanel.cpp  ConsensusPanel.h  ConsensusQuantChart.cpp  ConsensusQuantChart.h  DataLayersWidget.cpp  DataLayersWidget.h  FaimsPanelWidget.cpp  FaimsPanelWidget.h  FeatureEditDialog.cpp  FeatureEditDialog.h  FeatureTableWidget.cpp  FeatureTableWidget.h  HelpDialog.cpp  HelpDialog.h  IdentificationTableWidget.cpp  IdentificationTableWidget.h  ImagingPanelWidget.cpp  ImagingPanelWidget.h  IonMobilityPanelWidget.cpp  IonMobilityPanelWidget.h  LoadingOverlayWidget.cpp  LoadingOverlayWidget.h  LogWidget.cpp  LogWidget.h  MetadataBrowserWidget.cpp  MetadataBrowserWidget.h  OswPanel.cpp  OswPanel.h  PeakMapWidget.cpp  PeakMapWidget.h  PeakSurface3DWidget.cpp  PeakSurface3DWidget.h  RowStackWidget.cpp  RowStackWidget.h  SpectrumTableWidget.cpp  SpectrumTableWidget.h  SpectrumWidget.cpp  (+11 more)
src/widgets/shaders/: surface3d.frag  surface3d.vert
tests/: ChromatogramSourceTest.cpp  ConsensusDocumentTest.cpp  ConsensusDrilldownTest.cpp  ConsensusPanelTest.cpp  DataPanelsWorkflowTest.cpp  ExportWorkflowTest.cpp  FeatureDocumentTest.cpp  FeatureVisualizationTest.cpp  FormatRegistryTest.cpp  IdentificationDocumentTest.cpp  ImagingMaldiTest.cpp  ImagingWorkflowTest.cpp  LayoutModelTest.cpp  LayoutPersistenceTest.cpp  LogWidgetTest.cpp  MainWindowConsensusWorkflowTest.cpp  MainWindowFeatureWorkflowTest.cpp  MainWindowIdentificationWorkflowTest.cpp  MetadataBrowserTest.cpp  MobilityFaimsWorkflowTest.cpp  OswPanelTest.cpp  OswStoreTest.cpp  PeakMapRasterizerTest.cpp  PrecursorOverlayTest.cpp  RichFormatsTest.cpp  SelectionControllerTest.cpp  SpectrumAnnotationTest.cpp  SpectrumInteractionTest.cpp  TestData.h  TestMain.cpp  TraceSmoothingTest.cpp  UxWorkflowTest.cpp  ViewerDocumentTest.cpp  WriteBackTest.cpp
tests/data/: README.md  openswath_transitions.xic
tools/: ThermoRawSmoke.cpp
tools/screenshots/: fetch-data.sh  gallery.cpp  manifest.tsv  surface3d_shot.cpp
